# BambuStudio-LAN-Plus

./: .gitignore  BUILD_INSTRUCTIONS.txt  CMakeLists.txt  Ironing_best_settings_v2.3mf  MODIFICATIONS.md  README.md  RELEASE_NOTES.md  lan_device_rename.patch
.github/workflows/: build.yml
OrcaSlicer-main/.github/workflows/: build_all.yml  build_check_cache.yml
OrcaSlicer-main/resources/profiles/: RH3D.json
OrcaSlicer-main/resources/profiles/RH3D/filament/: Generic ABS @E3NG v1.2S.json  Generic ASA @E3NG v1.2S.json  Generic PCCF @E3NG v1.2S.json  Generic PETG @E3NG v1.2S.json  Generic PLA @E3NG v1.2S.json  Generic TPU @E3NG v1.2S.json  fdm_filament_abs.json  fdm_filament_asa.json  fdm_filament_pccf.json  fdm_filament_petg.json  fdm_filament_pla.json  fdm_filament_tpu.json
OrcaSlicer-main/resources/profiles/RH3D/machine/: E3NG v1.2S - 0.2 nozzle.json  E3NG v1.2S - 0.3 nozzle.json  E3NG v1.2S - 0.4 nozzle.json  E3NG v1.2S - 0.5 nozzle.json  E3NG v1.2S - 0.6 nozzle.json  fdm_common_E3NG v1.2S.json  fdm_machine_common.json
OrcaSlicer-main/resources/profiles/RH3D/process/: 0.10mm Standard @E3NG v1.2S.json  0.15mm Standard @E3NG v1.2S.json  0.20mm Fast @E3NG v1.2S.json  0.20mm Slow @E3NG v1.2S.json  0.20mm Standard @E3NG v1.2S.json  0.25mm Fast @E3NG v1.2S.json  0.25mm Standard @E3NG v1.2S.json  process_common_E3NG v1.2S.json
OrcaSlicer-main/resources/profiles/iQ/machine/: iQ TiQ2 0.25 nozzle.json  iQ TiQ2 0.6 nozzle.json  iQ TiQ2 0.8 nozzle.json
OrcaSlicer-main/resources/web/data/: text.js
OrcaSlicer-main/resources/web/guide/css/: dark.css
OrcaSlicer-main/resources/web/model/: index.html  model.css
OrcaSlicer-main/src/libslic3r/: ExPolygon.cpp
Plater-master/: .gitignore  CMakeLists.txt  README.md  deps.json
Plater-master/gui/: CMakeLists.txt  about.cpp  gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  partslist.cpp  partslist.h  plater-gui.manifest  platesviewer.cpp  platesviewer.h  viewer.cpp  viewer.h  wizard.cpp  wizard.h
Plater-master/plater/: CMakeLists.txt  Part.cpp  Part.h  PlacedPart.cpp  Placer.cpp  Request.cpp  Request.h  log.cpp  log.h  main.cpp  plater.manifest  sleep.cpp  util.cpp
Plater-master/plater/stl/: StlFactory.cpp
PrusaSlicer-2.9.4/resources/data/printer_gantries/: geometries.json  prusa3d_coreoneL_gantry.stl  prusa3d_xl_gantry.stl
PrusaSlicer-2.9.4/resources/localization/: PrusaSlicer.pot
PrusaSlicer-2.9.4/resources/localization/be/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/ca/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/cs/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/de/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/es/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/fi/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/fr/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/it/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/ja/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/pl/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/ru/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/tr/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/uk/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/localization/zh_CN/: PrusaSlicer.mo
PrusaSlicer-2.9.4/resources/shaders/110/: toolpaths_cog.vs
SuperSlicer_2.5.59.13_win64_240701/resources/localization/: PrusaSlicer.pot  Slic3r.pot
SuperSlicer_2.5.59.13_win64_240701/resources/localization/ca/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/cs/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/de/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/en/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/es/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/fr/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/hu/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/it/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/ja/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/ko/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/ko_KR/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/nl/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/pl/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/pt_BR/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/ru/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/tr/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/uk/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/zh_CN/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/localization/zh_TW_copy/: SuperSlicer.mo
SuperSlicer_2.5.59.13_win64_240701/resources/profiles/: Elegoo.ini  FLSun.ini
bbl/i18n/: BambuStudio.pot
bbs_test_tools/bbs_gcode_checker/: GCodeChecker.cpp
resources/calib/ironing/: Ironing_best_settings_v2.3mf
resources/web/guide/css/: dark.css
resources/web/include/: globalapi.js
resources/web/model/: model.css
resources/web/model/css/: dark.css
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  BitmapArrange.cpp  BitmapArrange.hpp  CMakeLists.txt  GCode.cpp  GCode.hpp  Model.cpp  PerimeterGenerator.cpp  PerimeterGenerator.hpp  Preset.cpp  Print.cpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp
src/libslic3r/Fill/: Fill.cpp
src/libslic3r/GCode/: SeamPlacer.cpp
src/libslic3r/Support/: SupportCommon.cpp  SupportParameters.hpp
src/slic3r/GUI/: DeviceManager.cpp  DeviceManager.hpp  GLCanvas3D.cpp  GLCanvas3D.hpp  GUI_App.cpp  MainFrame.cpp  ObjectDataViewModel.cpp  Plater.cpp  Plater.hpp  SelectMachinePop.cpp  Tab.cpp
src/slic3r/GUI/DeviceCore/: DevManager.cpp  DevManager.h
src/slic3r/GUI/GCodeRenderer/: BaseRenderer.cpp
src/slic3r/GUI/Jobs/: ArrangeJob.cpp
(+2 files in other folders)
